finished database relationship mapping