@@ -3,6 +3,7 @@ package guru.springframework.spring_6_rest_mvc.repositories;
 
 import guru.springframework.spring_6_rest_mvc.entities.Beer;
 import guru.springframework.spring_6_rest_mvc.entities.BeerOrder;
+import guru.springframework.spring_6_rest_mvc.entities.BeerOrderShipment;
 import guru.springframework.spring_6_rest_mvc.entities.Customer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,8 +28,8 @@ class BeerOrderRepositoryTest {
 
     @BeforeEach
     void setUp() {
-        testCustomer=customerRepository.findAll().get(0);
-        testBeer=beerRepository.findAll().get(0);
+        testCustomer=customerRepository.findAll().getFirst();
+        testBeer=beerRepository.findAll().getFirst();
     }
 
 
@@ -38,9 +39,12 @@ class BeerOrderRepositoryTest {
         BeerOrder beerOrder = BeerOrder.builder()
                 .customerRef("Test order")
                 .customer(testCustomer)
+                .beerOrderShipment(BeerOrderShipment.builder()
+                        .trackingNumber("12345r")
+                        .build())
                 .build();
 
-        BeerOrder savedBeerOrder = beerOrderRepository.saveAndFlush(beerOrder);
+        BeerOrder savedBeerOrder = beerOrderRepository.save(beerOrder);
         System.out.println(savedBeerOrder.getCustomerRef());
     }
 
